--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,10 +46,20 @@
         </div>
     </div>
     <div class="container">
+        
+        {%with messages = get_flashed_messages() %}
+            {%if messages%}
+                {%for message in messages%}
+                    <div class="alert alert-success">
+                        {{message}}
+                    </div>
+                {%endfor%}
+            {%endif%}
+        {%endwith%}
 
+        {% block content %}
+        
+        {% endblock %}
     </div>
-    {% block content %}
-    
-    {% endblock %}
 </body>
 </html>
